# hedge-fund-ml

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  autoencoder_v4.py  data_cleaning+benchmark.py  pyproject.toml
.github/workflows/: ci.yml
.jules/: bolt.md
GAN/: GAN.py  GAN_eval.py  GAN_post_training.py  MTSS_GAN.py  MTSS_WGAN.py  MTSS_WGAN_GP.py  WGAN.py  WGAN_GP.py
configs/: ae.yaml  data.yaml  data_registry.yaml  eval.yaml  eval_itrafo.yaml  features.yaml  replicate.yaml  replicate_itrafo.yaml  run.yaml  transformer.yaml  wgan.yaml
docs/: REPO_AUDIT.md  REPRODUCE.md  hpc.md
hpc/: README.md
jobs/: bundle_cpu.sbatch  replicate_eval.sbatch  reproduce_cpu.sbatch  train_itrafo_cpu.sbatch  train_itrafo_gpu.sbatch
notebooks/: _index.yaml  eda_data_cleaning.py  final_report.ipynb  final_report.py
reports/: metrics_latest.json  template.md
scripts/: build_features.py  bundle_report.py  data_prepare.py  eval.py  print_env.py  replicate.py  replicate_itrafo.py  train_ae.py  train_gan.py  train_transformer.py
src/data/: prepare.py  windowing.py
src/eval/: __init__.py  metrics.py
src/features/: __init__.py  hk_span.py  returns.py  vol_scale.py
src/hedge_fund_ml/: __init__.py  cli.py
src/hedge_fund_ml/config/: __init__.py
src/hedge_fund_ml/data/: __init__.py  registry.py
src/hedge_fund_ml/models/: __init__.py  autoencoder.py  blocks.py  itransformer.py
src/hedge_fund_ml/models/gan/: __init__.py  wgan.py
src/hedge_fund_ml/telemetry/: __init__.py  metadata.py
src/hedge_fund_ml/utils/: __init__.py  finance.py  seeding.py
src/pipeline/: __init__.py  evaluate.py  features.py  replicate.py
src/replicate/: __init__.py  decoder.py  itrafo.py
src/report/: __init__.py  exports.py  figures.py  summary.py  tables.py
tests/: test_autoencoder.py  test_bundle_build.py  test_bundle_report_manifest.py  test_ci_smoke.py  test_data_registry.py  test_decoder.py  test_features_hk_span.py  test_features_returns.py  test_finance_utils.py  test_metadata.py  test_metrics.py  test_prepare_utils.py  test_replication_decoder.py  test_report_exports.py  test_report_figures.py  test_report_summary.py  test_seeding.py  test_train_stub.py  test_wgan.py  test_windowing.py
tests/models/: test_itransformer.py
