[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hedge-fund-ml"
version = "0.1.0"
description = "Reproducible hedge fund replication research toolkit"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["finance", "machine-learning", "hedge-fund", "research"]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=1.5",
    "pydantic>=2.4",
    "pyyaml>=6.0",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
deep-learning = [
    "keras>=2.13",
    "scikit-learn>=1.3",
    "tensorflow>=2.13",
]

[project.scripts]
hedge-fund-ml = "hedge_fund_ml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv]
dev-dependencies = [
    "black>=23.12",
    "jupyter>=1.0",
    "jupytext>=1.15",
    "mypy>=1.6",
    "nbconvert>=7.10",
    "papermill>=2.5",
    "pre-commit>=3.4",
    "pytest>=7.4",
    "ruff>=0.1",
    "types-PyYAML>=6.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "C90"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
mypy_path = ["src"]
explicit_package_bases = true
