[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hedge-fund-ml"
version = "0.1.0"
description = "Reproducible hedge fund replication research toolkit"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["finance", "machine-learning", "hedge-fund", "research"]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=1.5",
    "pydantic>=2.4",
    "pyyaml>=6.0",
    "statsmodels>=0.14",
    "Jinja2>=3.1",
]

[dependency-groups]
dev = [
  "pre-commit",
  "ruff",
  "black",
  "mypy",
  "pytest",
  "papermill",
  "jupytext",
  "nbconvert",
  "matplotlib",
  "pandas",
  "numpy",
  "statsmodels",
  "cvxpy",
]
deep-learning-torch = [
  "einops",
  "optuna",
  "pytorch-lightning",
  "torch",
]

[project.scripts]
hedge-fund-ml = "hedge_fund_ml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "C90"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
mypy_path = ["src"]
explicit_package_bases = true
